<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_character"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/whitish"
        android:padding="@dimen/dimen_16"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_image"
        tools:src="@drawable/placeholder_character_image" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_18"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/imageview_character"
        app:layout_constraintEnd_toEndOf="@id/imageview_character"
        app:layout_constraintTop_toBottomOf="@id/guideline_image"
        android:layout_marginTop="@dimen/dimen_16"
        tools:text="@string/placeholder_character_name" />

    <TextView
        android:id="@+id/text_status_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="@style/char_detail_header_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/char_detail_style"
        app:layout_constraintStart_toStartOf="@id/text_status_header"
        app:layout_constraintTop_toBottomOf="@id/text_status_header"
        tools:text="@string/placeholder_status" />

    <TextView
        android:id="@+id/text_species_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        style="@style/char_detail_header_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_status" />

    <TextView
        android:id="@+id/text_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/char_detail_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_species_header"
        tools:text="@string/placeholder_species" />

    <TextView
        android:id="@+id/text_origin_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        style="@style/char_detail_header_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_species" />

    <TextView
        android:id="@+id/text_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/char_detail_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_origin_header"
        tools:text="@string/placeholder_origin" />

    <TextView
        android:id="@+id/text_location_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="@style/char_detail_header_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_origin" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/char_detail_style"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_location_header"
        tools:text="@string/placeholder_location" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>